Create User and Role Model, create start Role,User, auth router and controller

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,6 @@
-PORT=9001
-HOST=localhost
+DATABASE_PORT=9001
+DATABASE_URL=localhost
+DATABASE_USER=root
+PDATABASE_PASSWORD=""
+DDATABASE_NAME=db_btm_cinemas
+
