--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.2.3",
+    "axios": "^1.3.4",
+    "http-status-codes": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
